--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
   <div class="container">
-
+    <h1>
+      Hello World
+    </h1>
   </div>
     
   <script src="src/app.js"></script>
