--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -16,6 +16,7 @@
     <h1>
       Hello World
     </h1>
+    <a href="" class="btn btn-primary">Click me</a>
   </div>
     
   <script src="src/app.js"></script>
