--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Olathe, KS
           </h1>
           <h2>
-            Tuesday
+            Tuesday 12:11 AM
           </h2>
           <h5>
             04/27/2021
