--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/style.css" />
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
   crossorigin="anonymous">
+  <link rel="stylesheet" href="src/style.css" />
   <title>Weather App</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
             <input type="text" class="form-control" placeholder="Enter city">
           </div>
         </div>
-        <div class="col-2">          
+        <div class="col-sm">          
           <button class="btn btn-primary" type="button">Search</button>
           <button class="btn btn-success" type="button">Current</button>
         </div>
@@ -30,9 +31,9 @@
           <h1>
             Olathe, KS
           </h1>
-          <h2>
+          <h3>
             Tuesday 12:11 AM
-          </h2>
+          </h3>
           <h5>
             04/27/2021
           </h5>
@@ -44,7 +45,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-6">
           <img 
             src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
             alt="" 
