Updated JS to show time/date

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
           <div class="col-6">
             <h1 id="city"></h1>
             <ul>
-              <li>
-                Tuesday 12:11 AM
-              </li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
@@ -57,9 +55,6 @@
 
           <div class="col-6">
             <ul>
-              <li>
-                Percipitation: %
-              </li>
               <li>
                 Humidity: <span id="humidity"></span>%
               </li>
