--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
           <div class="col-6">
             <div class="clearfix weather-temperature">
               <img 
-                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                alt="sun" 
+                src=""
+                alt="clear" 
+                id="icon"
                 class="float-left"
+                
               />
               <div class="float-left">
                 <strong id="temperature"></strong><span class="units">°F | <a href="#">°C</a></span>
