--- a/index.html
+++ b/index.html
@@ -17,20 +17,26 @@
   <div class="container">
     <div class="weather-app-wrapper">
       <div class="weather-app">
-        <div class="row">
-          <div class="col-5">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter city">
+        <form id="search-form">
+          <div class="row">
+            <div class="col-8">
+              <input 
+              type="search" 
+              class="form-control" 
+              placeholder="Enter city"
+              id="city-input"
+              autocomplete="off"
+              />
             </div>
-          </div>
-          <div class="col-sm">          
-            <button class="btn btn-primary" type="button">Search</button>
-            <button class="btn btn-success" type="button">Current</button>
-          </div>
-        </div>
+            <div class="col-3">
+              <input 
+              class="btn btn-primary" 
+              type="submit" 
+              value="Search" />
+            </div>
+        </form>
 
-        <div class="row">
-          <div class="col-6">
+        <div class="overview">
             <h1 id="city"></h1>
             <ul>
               <li>Last updated: <span id="date"></span></li>
