--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                 
               />
               <div class="float-left">
-                <strong id="temperature"></strong><span class="units">°F | <a href="#">°C</a></span>
+                <strong id="temperature"></strong>
+                <span class="units">
+                  <a href="#" id="celsius-link" class="active">°C</a> | 
+                  <a href="#" id="fahrenheit-link">°F</a></span>
               </div>
             </div>
           </div>
