--- a/index.html
+++ b/index.html
@@ -75,8 +75,25 @@
             </ul>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-date">
+                <img src="http://openweathermap.org/img/wn/50d@2x.png" 
+                alt=""
+                width="42" 
+                />
+                <div class="weather-forecast-temperature">
+                  <span class="weather-forecast-temperature-max">
+                    18° </span>
+                  <span class="weather-forecast-temerature-min">
+                    12° </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      
           <small>
             <a 
               href="https://github.com/mollypaul/vanilla-weather-app.git"
