--- a/index.html
+++ b/index.html
@@ -75,33 +75,16 @@
             </ul>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">
-                <img src="http://openweathermap.org/img/wn/50d@2x.png" 
-                alt=""
-                width="42" 
-                />
-                <div class="weather-forecast-temperature">
-                  <span class="weather-forecast-temperature-max">
-                    18° </span>
-                  <span class="weather-forecast-temerature-min">
-                    12° </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
-          <small>
-            <a 
-              href="https://github.com/mollypaul/vanilla-weather-app.git"
-              target="_blank">
-              Open-source code
-            </a>
-              by Molly Martin
-          </small>
+      <small>
+        <a 
+          href="https://github.com/mollypaul/vanilla-weather-app.git"
+          target="_blank">
+          Open-source code
+        </a>
+          by Molly Martin
+      </small>
     </div>
     </div>
     <script src="src/app.js"></script>
