--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
               />
               <div class="float-left">
                 <strong id="temperature"></strong>
-                <span class="units">
-                  <a href="#" id="celsius-link" class="active">°C</a> | 
-                  <a href="#" id="fahrenheit-link">°F</a></span>
+                <span class="units">°F</span>
               </div>
             </div>
           </div>
@@ -70,7 +68,7 @@
                 Humidity: <span id="humidity"></span>%
               </li>
               <li>
-                Wind: <span id="wind"></span>km/h
+                Wind: <span id="wind"></span> mph
               </li>
             </ul>
           </div>
